<resources>
    <string name="app_name">GoodLink</string>
    <string name="button">Button</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="conectar_se_com_o_email">Conectar-se com o email</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastrar_se_com_email">Cadastrar-se com email</string>
    <string name="nome_e_sobrenome">Nome</string>
    <string name="criar_nova_conta">Criar nova conta</string>
    <string name="pol_tica_de_privacidade_e_termos_de_uso_title">Política de Privacidade e Termos de Uso:</string>
    <string name="pol_tica_de_privacidade_e_termos_de_uso_content">Nós, da GoodLink, estamos comprometidos em garantir a privacidade e segurança das informações fornecidas por nossos usuários. Ao utilizar nosso aplicativo, você concorda com nossas políticas de privacidade e termos de uso. Coleta de Informações: Coletamos informações pessoais, como nome e e-mail, e dados de navegação para melhorar sua experiência em nosso aplicativo. Essas informações são utilizadas internamente e não são compartilhadas com terceiros sem seu consentimento. Aceitação dos Termos: Ao acessar nosso aplicativo, você concorda com nossa política de privacidade e termos de uso. Caso discorde de alguma cláusula, recomendamos que não prossiga utilizando nossos serviços. Essas políticas estão sujeitas a alterações, por isso, recomendamos revisar periodicamente esta página para se manter informado sobre nossas práticas. Para obter informações detalhadas sobre nossa política de privacidade e termos de uso, consulte nossa página específica sobre o assunto.</string>
    <string name="terms">Termos de uso</string>
    <string name="li_e_aceito_os_termos_e_politica">Li e aceito os termos e politica</string>
    <string name="categoria">Categoria</string>
    <string name="descri_o">Descrição do conteúdo</string>
    <string name="linkContent">Link do conteúdo</string>
    <string name="nameOfCreator">Nome do criador</string>
    <string name="urlFromCreator">Créditos ao criador</string>
    <string name="textview">TextView</string>
    <string name="t_tulo">Título</string>
    <string name="goodlink">GoodLink</string>
    <string name="este_aplicativo_foi_criado_para_fins_estudantis">Este aplicativo foi criado para fins estudantis.</string>
    <string name="titulo">Título</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repositorios">repositórios</string>
    <string name="formul_rio">Formulário</string>
    <string name="usu_rio">usuário</string>
    <string name="usu_rios">usuários</string>
    <string name="enviar">Enviar</string>
    <string name="password_description">Senha do usuário</string>
    <string name="password_hint">Senha antiga</string>
    <string name="email_hint">Email</string>
    <string name="salvar">Salvar</string>
    <string name="nome_do_usu_rio">Nome</string>
    <string name="manter_me_logado">Manter-me logado</string>
    <string name="deslogar">Deslogar</string>
    <string name="nova_senha">Nova senha</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="voltar">voltar\n</string>
    <string name="confirmar">Confirmar</string>
    <string name="Aviso_para_postagem_de_formulários"><b>Repudiamos conteúdos de caráter sexual em nossa plataforma, e qualquer violação será denunciada formalmente às autoridades competentes.</b></string>
    <string name="ver_mais">ver mais</string>
    <string name="regular">Regular</string>
    <string name="ruim">Ruim</string>
    <string name="p_ssimo">Péssimo</string>
    <string name="bom">Bom</string>
    <string name="excelente">Excelente</string>
    <string name="coment_rios">Comentários</string>
    <string name="ordenar_por_ordem_alfab_tica">Ordenar por Ordem Alfabética</string>
    <string name="ordenar_por_data">Ordenar por Data</string>
    <string name="avaliado">Avaliado</string>
    <string name="insira_seu_coment_rio">Insira seu comentário</string>
    <string name="default_notification_channel_id" translatable="false">channel_id</string>
    <string name="fcm_message">FCM Message</string>
    <string name="programa_o">Programação</string>
    <string name="matem_tica">Matemática</string>
    <string name="portugu_s">Português</string>
    <string name="ci_ncia">Ciência</string>
    <string name="geografia">Geografia</string>
    <string name="hist_ria">História</string>
    <string name="menuoptions">menuOptions</string>
    <string name="adicionar_aos_favoritos">Adicionar aos favoritos</string>
    <string name="adicionar_repositorios">Adicionar a coleção</string>
    <string name="ver_repositorios_do_usu_rio">Ver repositórios do usuário</string>
    <string name="copiar">Copiar</string>
    <string name="copiar_nome_do_canal">Copiar nome do canal</string>
    <string name="copiar_nome_do_repositorio">Copiar nome do repositório</string>
    <string name="copiar_link_do_criador">Copiar link do criador</string>
    <string name="copiar_link_da_repositorio">Copiar link da repositório</string>
    <string name="copiar_link_do_canal_e_da_repositorio">Copiar link do criador e do repositório</string>
    <string name="op_o_1">Opção 1</string>
    <string name="remover_dos_favoritos">Remover dos favoritos\n</string>
    <string name="criar_repositorios">Criar repositórios</string>
    <string name="nome_do_repositório">Nome do repositório</string>
    <string name="cancelar">Cancelar</string>
    <string name="insira_o_nome_da_repositório">Insira o nome do repositório</string>
    <string name="log_out">Log Out</string>
    <string name="desconectar">Desconectar</string>
    <string name="configura_es">Configurações</string>
    <string name="reposit_rios">Repositórios</string>
    <string name="recarregar_reposit_rios">Recarregar repositórios</string>
    <string name="ordenar">Ordenar</string>
    <string name="data_de_publica_o">Data de publicação</string>
    <string name="alfab_tica">Alfabética</string>
    <string name="filtrar">Filtrar</string>
    <string name="filtar_por_categoria">Filtrar por categoria</string>
    <string name="curtido">Curtido</string>
    <string name="n_o_curtido">Não curtido</string>
    <string name="reportar">Reportar</string>
    <string name="filtrar_por_cole_o">Filtrar por coleção</string>
    <string name="filtrar_por_favoritos">Filtrar por favoritos</string>
    <string name="title_activity_pop_up_report">PopUpReport</string>
    <string name="insira_o_motivo_do_reporte">Insira o motivo do reporte</string>
    <string name="descri_o_completa">Descrição completa</string>
    <string name="conte_do_sexual">Conteúdo sexual</string>
    <string name="conte_do_violento_ou_repulsivo">Conteúdo violento ou repulsivo</string>
    <string name="conte_do_preconceituoso">Conteúdo preconceituoso</string>
    <string name="spam_ou_enganoso">Spam ou enganoso</string>
    <string name="desinforma_o">Desinformação</string>
    <string name="adicionar_reposit_rio">Adicionar repositório</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="deletar_conta">Deletar conta</string>
    <string name="IntroductionText">Bem vindo ao GoodLink, o seu aplicativo para compartilhar preciosos links. Fiz o projeto com a intenção de poder ajudar as pessoas que não possuem um computador e mesmo assim gostariam de compartilhar algo com a comunidade. Espero que curtam a experiencia e lembrem-se que eu não quero ser preso, então tomem cuidado com o que compartilham. \nAgradeço desde já por estar utilizando meu aplicativo!</string>
    <string name="fontSizeChoice">Escolha o tamanho da fonte para o aplicativo</string>
    <string name="escolha_o_tema_do_aplicativo">Escolha o tema do aplicativo</string>
    <string name="modo_escuro">Modo Escuro</string>
    <string name="modo_claro">Modo Claro</string>
    <string name="n_o_tem_uma_conta_registre_se">Não tem uma conta? Registre-se</string>
    <string name="j_possui_uma_conta_entrar">Já possui uma conta? Entrar</string>
    <string name="pular">Pular</string>
    <string name="estes_termos_de_uso_s_o_regidos_pelas_leis_aplic_veis_em_sua_jurisdi_o_respeitando_os_princ_pios_de_conflitos_de_leis">Estes Termos de Uso são regidos pelas leis aplicáveis em sua jurisdição, respeitando os princípios de conflitos de leis.</string>
    <string name="_4_1_dados_de_login_coletamos_apenas_informa_es_necess_rias_para_a_autentica_o_no_aplicativo_como_nome_de_usu_rio_e_senha_esses_dados_s_o_utilizados_exclusivamente_para_permitir_o_acesso_seguro_plataforma_e_n_o_s_o_compartilhados_com_terceiros">4.1 Dados de Login: Coletamos apenas informações necessárias para a autenticação no aplicativo, como nome de usuário e senha. Esses dados são utilizados exclusivamente para permitir o acesso seguro à plataforma e não são compartilhados com terceiros.</string>
    <string name="_7_modifica_es_nos_termos_de_uso">7. Modificações nos Termos de Uso</string>
    <string name="a_goodlink_n_o_se_responsabiliza_por">A GoodLink não se responsabiliza por:</string>
    <string name="_6_2_danos_diretos_ou_indiretos_resultantes_do_uso_ou_da_incapacidade_de_usar_o_aplicativo">6.2 Danos diretos ou indiretos resultantes do uso ou da incapacidade de usar o aplicativo.</string>
    <string name="_3_2_n_o_armazenar_ou_compartilhar_links_que_violem_leis_e_regulamenta_es_aplic_veis_em_sua_jurisdi_o">3.2 Não armazenar ou compartilhar links que violem leis e regulamentações aplicáveis em sua jurisdição.</string>
    <string name="_5_compartilhamento_de_dados_com_terceiros">5. Compartilhamento de Dados com Terceiros</string>
    <string name="_1_aceita_o_dos_termos">1. Aceitação dos Termos</string>
    <string name="ao_utilizar_o_aplicativo_goodlink_voc_concorda_integralmente_com_estes_termos_de_uso_caso_n_o_concorde_com_algum_dos_termos_aqui_estabelecidos_recomendamos_que_n_o_utilize_nossos_servi_os">Ao utilizar o aplicativo GoodLink, você concorda integralmente com estes Termos de Uso. Caso não concorde com algum dos termos aqui estabelecidos, recomendamos que não utilize nossos serviços.</string>
    <string name="_3_1_n_o_armazenar_ou_compartilhar_links_que_contenham_material_relacionado_pornografia_infantil_essa_pr_tica_expressamente_proibida_e_resultar_em_medidas_legais_imediatas_incluindo_a_comunica_o_s_autoridades_competentes">3.1 Não armazenar ou compartilhar links que contenham material relacionado à pornografia infantil. Essa prática é expressamente proibida e resultará em medidas legais imediatas, incluindo a comunicação às autoridades competentes.</string>
    <string name="_4_coleta_e_uso_de_dados">4. Coleta e Uso de Dados</string>
    <string name="em_caso_de_d_vidas_ou_preocupa_es_sobre_estes_termos_de_uso_entre_em_contato_conosco_atrav_s_dos_canais_disponibilizados_em_nosso_aplicativo">Em caso de dúvidas ou preocupações sobre estes Termos de Uso, entre em contato conosco através dos canais disponibilizados em nosso aplicativo.</string>
    <string name="_4_2_dados_de_uso_e_erros_registramos_informa_es_relacionadas_ao_uso_do_aplicativo_e_eventuais_falhas_com_o_objetivo_de_aprimorar_a_performance_e_corrigir_bugs_esses_dados_s_o_analisados_internamente_e_podem_ser_acessados_pelos_usu_rios_para_transpar_ncia">4.2 Dados de Uso e Erros: Registramos informações relacionadas ao uso do aplicativo e eventuais falhas, com o objetivo de aprimorar a performance e corrigir bugs. Esses dados são analisados internamente e podem ser acessados pelos usuários para transparência.</string>
    <string name="_8_lei_aplic_vel">8. Lei Aplicável</string>
</resources>