<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/favority"
        android:title="@string/adicionar_aos_favoritos" />

    <item
        android:id="@+id/copy"
        android:title="@string/copiar" >
        <menu>
            <item
                android:id="@+id/copyLinkCanal"
                android:title="@string/copiar_link_do_criador" />

            <item
                android:id="@+id/copyLinkRepository"
                android:title="@string/copiar_link_da_repositorio" />

            <item
                android:id="@+id/copyLinkBoth"
                android:title="@string/copiar_link_do_canal_e_da_repositorio" />
        </menu>
    </item>

    <item
        android:id="@+id/report"
        android:title="@string/reportar" />
</menu>